syntax = "proto3";
package simplegocache;

service Cache {
  rpc NewCache (NewCacheMsg) returns (Empty);
  rpc Add (Entry) returns (CacheMsg);
  rpc Delete (Entry) returns (Empty);
  rpc Read (Entry) returns (Entry);
  rpc InCache (Entry) returns (Bool);
  rpc Update (Entry) returns (CacheMsg);
  rpc Prune (Empty) returns (Empty);
  rpc Close (Empty) returns (Empty);
}

message NewCacheMsg {
  string key = 1;
  int64 ttl = 2;
  int32 maxElements = 3;
  int32 maxElementSize = 4;
}

message Entry {
  bytes content = 1;
  string key = 2;
}

message CacheMsg {
  string msg = 1;
}

message Bool {
  bool in_cache = 1;
}


message Empty {

}